--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ ol li {
     max-width: 1100px;
     width: 100%;
     margin: 0 auto;
+    padding: 40px 20px;
 }
 
 #hero {
@@ -180,4 +181,60 @@ h2 {
     width: 60%;
     padding-right: 150px;
     float: left;
+}
+
+.hero-para {
+    font-size: 36px;
+    line-height: 40px;
+    font-family: 'HelveticaNeue-Thin';
+    color: white;
+    margin-bottom: 55px;
+}
+
+
+.cta-button {
+    padding: 23px 25px;
+    background: #282828;
+    color: white;
+    text-decoration: none;
+    border-radius: 50px;
+}
+
+.cta-button:hover {
+    background: #383737;
+    transition: 0.3s;
+}
+
+.phone-icon {
+    vertical-align: middle;
+    padding-right: 20px;
+}
+
+/* APP FEATURES */
+
+#app-features .container {
+    text-align: center;
+    padding: 60px 20px;
+}
+
+#app-features h2 {
+    color: #8a8a8a;
+    margin-bottom: 40px;
+}
+
+.p-features {
+    font-family: 'HelveticaNeue-Thin';
+    font-size: 22px;
+    line-height: 28px;
+    padding: 0px 130px;
+}
+/* 
+.row {
+    display: flex;
+} */
+
+.col-4-app {
+    width: 33.33%;
+    float: left;
+    padding: 0px 45px;
 }
