--- a/css/style.css
+++ b/css/style.css
@@ -85,9 +85,8 @@ i {
 p, 
 ul li,
 ol li {
-    font-size: 16px;
+    font-size: 17px;
     line-height: 23px;
-    margin-bottom: 20px;
 }
 
 /* GENERAL RULES */
@@ -122,7 +121,6 @@ ol li {
 
 body {
     font-family: 'Montserrat';
-    background: grey;
 }
 
 h1 {
@@ -228,13 +226,171 @@ h2 {
     line-height: 28px;
     padding: 0px 130px;
 }
-/* 
+
 .row {
-    display: flex;
-} */
+    overflow: hidden;
+    margin-top: 50px;
+}
 
 .col-4-app {
     width: 33.33%;
     float: left;
     padding: 0px 45px;
+}
+
+.col-4-app p {
+    font-family: 'HelveticaNeue-Thin';
+    font-size: 18px;
+    line-height: 24px;
+    color: #646464;
+}
+
+.row h3 {
+    font-size: 24px;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin: 30px 0;
+}
+
+#nose {
+    background-image: url('../img/nose-bg.png');
+    background-size: cover;
+    background-position: center;
+}
+
+.download-info {
+    width: 50%;
+    padding: 200px 0px;
+}
+
+#nose h2 {
+    margin-bottom: 40px;
+    color: white;
+}
+
+.nose-p {
+    font-size: 24px;
+    line-height: 30px;
+    font-family: 'HelveticaNeue-Thin';
+    margin-bottom: 50px;
+}
+
+.download-btn {
+    padding: 15px;
+    background: #d9332d;
+    border-radius: 50px;
+    color: white;
+    text-decoration: none;
+    transition: 0.3s;
+    margin-left: 20px;
+}
+
+.download-btn:hover {
+    background: #c33934;
+    transition: 0.3s;
+}
+
+.reddish {
+    color: #f55150;
+}
+
+/* FOOTER */
+
+footer {
+    background: #2e2e38;
+}
+
+footer .container {
+    padding: 120px 20px;
+}
+
+footer h4 {
+    font-size: 20px;
+}
+
+footer p {
+    font-family: 'HelveticaNeue-Thin';
+}
+
+.ul-posts li {
+    font-size: 15px;
+    line-height: 20px;
+    margin-bottom: 5px;
+    padding-left: 70px;
+}
+
+.col-4-footer {
+    float: left;
+    width: 33.33%;
+    margin-top: 77px;
+    color: white;
+    padding: 30px;
+}
+
+footer .container {
+    overflow: hidden;
+}
+
+.ul-posts, 
+.ul-tweets {
+    margin-top: 25px;
+    font-family: 'HelveticaNeue-Thin';
+}
+
+.reddish-bg {
+    background: url('../img/rectangle.png') no-repeat;
+}
+
+.block {
+    display: block;
+}
+
+.p-about {
+    font-size: 15px;
+    font-style: italic;
+    margin-top: 25px;
+}
+
+.ul-tweets li {
+    list-style: none;
+    margin-bottom: 25px;
+}
+
+.smallText {
+    font-size: 11px;
+    margin-top: 5px;
+}
+
+/* COPYRIGHT */
+
+.copyright .container {
+    padding: 40px;
+    text-align: center;
+}
+
+.copyright {
+    background-color: #d7dedc;
+}
+
+.inline {
+    display: inline-block;
+    font-size: 20px;
+    vertical-align: middle;
+}
+
+.cr, 
+.me {
+    margin-right: 40px;
+}
+
+.fb,
+.tw {
+    margin-right: 40px;
+}
+
+.cr:after,
+.me:after {
+    content: '';
+    border: 1px solid #555555;
+    margin-left: 35px;
 }
